  config files for Msged, one for a Western codedpage and one for a Cyrillic
  codepage, for example. See the section "Special Characters" in the
  "Advanced Topics" section of the manual for more information.

- The UNIX version now draws pseudographics (instead of the ugly minus plus
  pipe graphics that was used previously) if the termcap entry suggests that
  the terminal can do it. Looks much nicer than before.

[ - JAM Support. Still experimental. Thanks to Fedor Lizunkov. ]
[ JAM SUPPORT DOES NOT WORK YET! DO NOT USE IT! ]

- Character set translate now does not only recode the mail text, but also
  the message header (from, to, and subject field). This allows for umlauts
  or cyrillic letters in the header, provided the recipient mail editor also
  has this feature.

- New Switch: DirectList. If you put "Switch DirectList On" into your config
  file, you will directly drop into the message listing mode when entering a
  message area, instead of the individual message reading mode like it is the
  default.

- New keyword: Printer. Specifies the printer port (OS/2, DOS, Windows)
  resp. the lpr options (UNIX) to use for printing (Alt+W, Print).
  Default is "PRN" on OS/2, DOS and Windows, and an empty string ("lpr -" is
  called without any options, so that the default queue is used) on UNIX.

- Reworked the file import/export interface. You now have a nice menu for
  selecting the file to read or write, and menus that ask you if you if you
  want to write the text to file, or to print it or to pipe it, and which
  export mode should be used.

- Support for @FLAGS kludge lines. Msged now will write a FLAGS kludge
  line if flags that are not supported by the current storage format
  have to be saved, and it recognises flags in FLAGS kludge lines in
  messages that it reads. See FSC 0053 for further information.

- Support for the following new message flags:
  kfs, a/s, imm, tfs, lock, cfm, zon, hub